Revert "fix animation"
This reverts commit 6b183d1926b99627c22a2cd5b4aed6e75206202b.

--- a/src/layouts/components/sections/HomeBanner.astro
+++ b/src/layouts/components/sections/HomeBanner.astro
@@ -50,11 +50,8 @@ let {
           {
             title && (
               <AnimatedText
-                class="gold-text hero-title mb-6 text-center"
+                class="font-hero gold-text hero-title mb-6 text-center"
                 content={markdownify(title)}
-                blur={false}
-                stagger={0.03}
-                delay={0.08}
               />
             )
           }
