--- a/src/layouts/components/sections/OurValue.astro
+++ b/src/layouts/components/sections/OurValue.astro
@@ -73,6 +73,11 @@ let { title, subtitle, list } = actualContent as ourValueSectionType;
 </section>
 
 <style>
+  .section-title :global(strong) {
+    color: inherit;
+    font-style: normal;
+  }
+
   .section-wave-light {
     position: relative;
     z-index: 1;
